pihole/pihole-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: homeserver

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pihole

  template:
    metadata:
      labels:
        app: pihole

    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet

      containers:
      - name: pihole
        image: pihole/pihole:latest

        volumeMounts:
        - name: pihole-data
          mountPath: /etc/pihole

      volumes:
      - name: pihole-data
        persistentVolumeClaim:
          claimName: pihole-data
