pihole/pihole-service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: homeserver

spec:
  selector:
    app: pihole

  ports:
  - name: http
    port: 80
    targetPort: 8084
