pihole/pihole-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc
  namespace: homeserver

spec:
  selector:
    app: pihole

  ports:
  - name: http
    port: 80
    targetPort: 80
