pihole/pihole-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: homeserver
spec:
  parentRefs:
  - name: homeserver

  hostnames:
  - pihole.homeserver.local

  rules:
  - backendRefs:
    - name: pihole-web
      port: 80
